--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Brian Lee",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "express": "^4.15.0",
     "express-react-views": "^0.10.2",
     "immutable": "^3.8.1",
