--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "server:dev": "NODE_ENV=development nodemon src/server/app.js --exec babel-node",
     "webpack:dev": "NODE_ENV=development webpack-dev-server --inline --hot --config webpack/webpack.config.babel.js",
+    "server:webpack:dev": "NODE_ENV=development BABEL_ENV=node webpack --config webpack/webpack.server.config.babel.js",
     "dev": "npm run webpack:dev & npm run server:dev",
     "clean": "rm -rf public/dist"
   },
@@ -28,6 +29,7 @@
   "devDependencies": {
     "babel-loader": "^6.3.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-system-import-transformer": "^3.1.0",
     "babel-preset-env": "^1.2.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2017": "^6.22.0",
@@ -35,11 +37,13 @@
     "babel-preset-stage-2": "^6.22.0",
     "bundle-loader": "^0.5.5",
     "css-loader": "^0.27.3",
+    "ignore-loader": "^0.1.2",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.14.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-node-externals": "^1.6.0"
   }
 }
